    - add screen as the server upgrade runs inside it, thanks to
      Steve Langasek
  * DistUpgrade/DistUpgradeController.py, 
    DistUpgrade/prerequists-sources.list:
    - use the release-upgrader-python-apt from lucid-updates instead
      of lucid-proposed

  [ Brian Murray ]
  * UpdateManager/UpdateManager.py
    - add periods to sentences in refresh_updates_count

 -- Brian Murray <brian@ubuntu.com>  Fri, 06 Jan 2012 09:36:57 -0800

update-manager (1:0.155.2) precise; urgency=low

  [ Robert Roth ]
  * DistUpgrade/DistUpgradeController.py:
    - Avoid using systemdir abbreviation (LP: #903939)

  [ Brian Murray ]
  * debian/source_update-manager.py:
    - Use attach_gesttings_package instead of attach_gconf
  
  [ Jean-Baptiste Lallement ]
  * lp:~jibel/update-manager/AutoUpgradeTester-aptclone:
    - support building a profile from a apt-clone file and testing
      that
    - add amd64 test profiles

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 09 Jan 2012 11:30:56 +0100

update-manager (1:0.155.1) precise; urgency=low

  * fix crash in backports fetching code

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 09 Dec 2011 21:34:43 +0100

update-manager (1:0.155) precise; urgency=low

  [ Michael Vogt ]
  * lp:~mvo/update-manager/lucid-precise-upgrades:
    - support upgrades with multiarch-support (for e.g. flash)
      from lucid to precise by using the release-upgrader-python-apt
      from lucid-proposed during the upgrade

  [ Gabor Kelemen ]
  * Mark a few strings for translation, make variables reorderable
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 09 Dec 2011 15:12:13 +0100

update-manager (1:0.154.6) precise; urgency=low

  * DistUpgrade/DistUpgrade.ui:
    - remove <child internal-child="selection"> as this is not
      supported by the gtkbuilder in lucid and makes the release
      upgrader crash (LP: #898482)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 01 Dec 2011 16:38:56 +0100
