@@ -12,6 +12,8 @@ update-manager (1:0.155.3) UNRELEASED; urgency=low
   [ Brian Murray ]
   * UpdateManager/UpdateManager.py
     - add periods to sentences in refresh_updates_count
+  * DistUpgrade/DistUpgradeController.py
+    - call apport-cli directly for bug reporting of errors
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 06 Jan 2012 09:36:57 -0800
 
